third try to fix z-index

--- a/Código fuente sin compilar/PlanDeEntrenamiento/src/app/core/layout/aside/aside.component.scss
+++ b/Código fuente sin compilar/PlanDeEntrenamiento/src/app/core/layout/aside/aside.component.scss
@@ -9,6 +9,11 @@ h2 {
   font-weight: bold;
 }
 
+.aside-header {
+
+  z-index: 1000000000 !important;
+}
+
 @media (min-width: 701px) {
   mat-icon {
     display: none;
